Render home view into a main container

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,8 @@
     </head>
 
     <body>
-
+        <div id="main-region" class="container"></div>
+        
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
