--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,10 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         
         <link rel="stylesheet" href="styles/main.css">
+
+        <!-- build:css(app) styles/vendor.css -->
+        <link rel="stylesheet" href="styles/vendor/bootstrap-editable.css">
+        <!-- endbuild -->
         
 
         <!-- build:js scripts/vendor/modernizr.js -->
